アイコン追加、その他調整